--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <div class="header">
     <div class="logo"><span>mi</span>Amor</div>
-    <div class="gme">GME</div>
+    <div class="gme">Platform</div>
     <div class="sub-text">
       Earn up to <span>$2.5</span> from Matching and Getting matched with the love of your life on <span>MiAmor</span>
     </div>
@@ -140,8 +140,19 @@
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
         Start a Chat with them
+        You’ve been paired with Amaka Bisola Aisha<br>
+        Start a Chat with them
+        You’ve been paired with Amaka Bisola Aisha<br>
+        Start a Chat with them
+        You’ve been paired with Amaka Bisola Aisha<br>
+        Start a Chat with them
+        You’ve been paired with Amaka Bisola Aisha<br>
+        Start a Chat with them
+        You’ve been paired with Amaka Bisola Aisha<br>
+        Start a Chat with them
       </div>
     </div>
+    <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box">
       <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
@@ -149,11 +160,24 @@
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
         Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
+        You’ve been paired with Chinedu Tunde Musa<br>
+        Start a Chat with them
       </div>
     </div>
   </div>
 
   <button class="join-btn">Join us today</button>
+  <div class="heart">💞</div>
 
 </body>
 </html>
