--- a/index.html
+++ b/index.html
@@ -140,14 +140,21 @@
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
         Start a Chat with them
-        You’ve been paired with Amaka Bisola Aisha<br>
+      </div>
+    </div>
+    <div class="heart">💞</div>
+    <div class="profile-box">
+      <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>
+        You’ve been paired with Chinedu Tunde Musa<br>
         Start a Chat with them
-        You’ve been paired with Amaka Bisola Aisha<br>
-        Start a Chat with them
-        You’ve been paired with Amaka Bisola Aisha<br>
-        Start a Chat with them
-        You’ve been paired with Amaka Bisola Aisha<br>
-        Start a Chat with them
+      </div>
+    </div>
+    <div class="profile-box">
+      <img src="https://i.imgur.com/T5qH7Uu.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
         Start a Chat with them
       </div>
@@ -159,16 +166,21 @@
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
         Start a Chat with them
-        You’ve been paired with Chinedu Tunde Musa<br>
+      </div>
+    </div>
+    <div class="profile-box">
+      <img src="https://i.imgur.com/T5qH7Uu.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>
+        You’ve been paired with Amaka Bisola Aisha<br>
         Start a Chat with them
-        You’ve been paired with Chinedu Tunde Musa<br>
-        Start a Chat with them
-        You’ve been paired with Chinedu Tunde Musa<br>
-        Start a Chat with them
-        You’ve been paired with Chinedu Tunde Musa<br>
-        Start a Chat with them
-        You’ve been paired with Chinedu Tunde Musa<br>
-        Start a Chat with them
+      </div>
+    </div>
+    <div class="heart">💞</div>
+    <div class="profile-box">
+      <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
         Start a Chat with them
       </div>
@@ -176,7 +188,6 @@
   </div>
 
   <button class="join-btn">Join us today</button>
-  <div class="heart">💞</div>
 
 </body>
 </html>
