--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </head>
 <body>
 
-  <img src="IMG-20250803-WA0042.jpg" alt="roses" class="roses">
+  <img src="M3.jpg" alt="roses" class="roses">
 
   <div class="header">
     <div class="logo"><span>mi</span>Amor</div>
@@ -135,7 +135,7 @@
 
   <div class="profiles">
     <div class="profile-box">
-      <img src="https://i.imgur.com/T5qH7Uu.jpg" alt="Male Match">
+      <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
@@ -144,7 +144,7 @@
     </div>
     <div class="heart">💞</div>
     <div class="profile-box">
-      <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
+      <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
@@ -152,7 +152,7 @@
       </div>
     </div>
     <div class="profile-box">
-      <img src="https://i.imgur.com/T5qH7Uu.jpg" alt="Male Match">
+      <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
@@ -161,7 +161,7 @@
     </div>
     <div class="heart">💞</div>
     <div class="profile-box">
-      <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
+      <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
@@ -169,7 +169,7 @@
       </div>
     </div>
     <div class="profile-box">
-      <img src="https://i.imgur.com/T5qH7Uu.jpg" alt="Male Match">
+      <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Amaka Bisola Aisha<br>
@@ -178,7 +178,7 @@
     </div>
     <div class="heart">💞</div>
     <div class="profile-box">
-      <img src="https://i.imgur.com/jAhMXYD.jpg" alt="Female Match">
+      <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>
         You’ve been paired with Chinedu Tunde Musa<br>
