--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </head>
 <body>
 
-  <img src="M3.jpg" alt="roses" class="roses">
+  <img src="M3.png" alt="roses" class="roses">
 
   <div class="header">
     <div class="logo"><span>mi</span>Amor</div>
