--- a/index.html
+++ b/index.html
@@ -324,6 +324,33 @@
         <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
       </div>
     </div>
+    <div class="profile-box slide-in-left pre-animate">
+      <img src="M1.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+      </div>
+    </div>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="M1.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+      </div>
+    </div>
+    <div class="profile-box slide-in-left pre-animate">
+      <img src="M1.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+      </div>
+    </div>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="M1.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+      </div>
+    </div>
+    
   </div>
 
   <button class="join-btn">Join us today</button>
