--- a/indexx.html
+++ b/indexx.html
@@ -324,6 +324,7 @@
         <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
       </div>
     </div>
+    <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
@@ -337,6 +338,7 @@
         <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
       </div>
     </div>
+    <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
