--- a/index.html
+++ b/index.html
@@ -321,7 +321,11 @@
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <strong><h1>Mi Amor!</h1></strong><br>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
+
+🚀Whether you're in *Ghana, Kenya, Uganda, Sierra Leone, Cameroon*, or beyond, MiAmor offers you the unique opportunity to *find love while earning from multiple countries*.
+
+🚀Join thousands who are already building relationships and generating income across Africa and the world. With MiAmor, *love and opportunity know no boundaries*<br>Start a Chat with them
       </div>
     </div>
     <div class="heart">💞</div>
