--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       box-shadow: 0 0 15px #00e0ff;
       transition: 0.3s ease;
       margin: 30px auto 50px auto;
-      max-width: 160px;
+      max-width: 100px;
     }
 
     .join-btn:hover {
@@ -334,6 +334,7 @@
       <div class="match-message">
         <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
       </div>
+      <button class="join-btn">Join us today</button>
     </div>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
