--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
       cursor: pointer;
       box-shadow: 0 0 15px #00e0ff;
       transition: 0.3s ease;
-      margin: 30px auto 50px auto;
-      max-width: 100px;
+      margin-bottom: 50px;
     }
 
     .join-btn:hover {
