--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
         <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <div>
         <button class="join-btn">Join us today</button>
+        </div>
       </div>
     </div>
     
