--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong>Mi Amor!</strong><br><p>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
+
+🚀Whether you're in *Ghana, Kenya, Uganda, Sierra Leone, Cameroon*, or beyond, MiAmor offers you the unique opportunity to *find love while earning from multiple countries*.*</p>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
       </div>
     </div>
     <button class="join-btn">Join us today</button>
