--- a/index.html
+++ b/index.html
@@ -311,11 +311,9 @@
 
   <div class="profiles">
     <div class="profile-box slide-in-left pre-animate">
-      <img src="M1.jpg" alt="Male Match">
+      <img src="Mo1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br><p>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
-
-🚀Whether you're in *Ghana, Kenya, Uganda, Sierra Leone, Cameroon*, or beyond, MiAmor offers you the unique opportunity to *find love while earning from multiple countries*.*</p>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong><h1>MiAmor Platform – Love, Earnings & Skills Across Africa</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -323,11 +321,11 @@
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
+        <strong><h1>Mi Amor!</h1></strong><br><h1>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
 
 🚀Whether you're in *Ghana, Kenya, Uganda, Sierra Leone, Cameroon*, or beyond, MiAmor offers you the unique opportunity to *find love while earning from multiple countries*.
 
-🚀Join thousands who are already building relationships and generating income across Africa and the world. With MiAmor, *love and opportunity know no boundaries*<br>Start a Chat with them
+🚀Join thousands who are already building relationships and generating income across Africa and the world. With MiAmor, *love and opportunity know no boundaries*</h1><br>Start a Chat with them
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -335,7 +333,7 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -343,7 +341,7 @@
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -351,7 +349,7 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -359,7 +357,7 @@
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong>Mi Amor!</strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
       </div>
     </div>
     
