--- a/index.html
+++ b/index.html
@@ -313,19 +313,15 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>MiAmor Platform – Love, Earnings & Skills Across Africa</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
+        <strong><h1>What Is MiAmor?</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="M1.jpg" alt="Female Match">
+      <img src="Mo2.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br><h1>🚀 *MiAmor is a true multinational platform, bringing people together across borders.*
-
-🚀Whether you're in *Ghana, Kenya, Uganda, Sierra Leone, Cameroon*, or beyond, MiAmor offers you the unique opportunity to *find love while earning from multiple countries*.
-
-🚀Join thousands who are already building relationships and generating income across Africa and the world. With MiAmor, *love and opportunity know no boundaries*</h1><br>Start a Chat with them
+        <strong><h1>Earn While You Match – Find Love & Make Money on MiAmor</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
       </div>
     </div>
     <button class="join-btn">Join us today</button>
@@ -333,7 +329,13 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="M1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong><h1>How Can I Play and Earn Real Cash on MiAmor?</h1></strong><br><p>Play fun games and earn real money on MiAmor!
+Fund your wallet
+Choose from exciting games
+Win and withdraw instantly to your bank account.
+
+Whether for fun or profit, each win brings real earnings.
+</p><br>🎮 Play smart. Win real. Get paid fast!
       </div>
     </div>
     <button class="join-btn">Join us today</button>
