--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo2.jpg" alt="Female Match">
+      <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
         <strong><h1>Earn While You Match – Find Love & Make Money on MiAmor</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
       </div>
@@ -327,7 +327,7 @@
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
-      <img src="M1.jpg" alt="Male Match">
+      <img src="Mo2.jpg" alt="Male Match">
       <div class="match-message">
         <strong><h1>How Can I Play and Earn Real Cash on MiAmor?</h1></strong><br><p>Play fun games and earn real money on MiAmor!
 Fund your wallet
