--- a/index.html
+++ b/index.html
@@ -341,25 +341,87 @@ Whether for fun or profit, each win brings real earnings.
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="M1.jpg" alt="Female Match">
+      <img src="Mo3.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
+✅ Engage more, win more.
+✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
-      <img src="M1.jpg" alt="Male Match">
+      <img src="Mo4.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Amaka Bisola Aisha<br>Start a Chat with them
+        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+      </div>
+    </div>
+
+     <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="Mo3.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
+✅ Engage more, win more.
+✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
-    <div class="profile-box fade-in pre-animate">
-      <img src="M1.jpg" alt="Female Match">
+    <div class="profile-box slide-in-left pre-animate">
+      <img src="Mo4.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>Mi Amor!</h1></strong><br>You’ve been paired with Chinedu Tunde Musa<br>Start a Chat with them
+        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+      </div>
+    </div>
+
+    <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="Mo3.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
+✅ Engage more, win more.
+✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
+      </div>
+    </div>
+    <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box slide-in-left pre-animate">
+      <img src="Mo4.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+      </div>
+    </div>
+
+    <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="Mo3.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
+✅ Engage more, win more.
+✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
+      </div>
+    </div>
+    <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box slide-in-left pre-animate">
+      <img src="Mo4.jpg" alt="Male Match">
+      <div class="match-message">
+        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+      </div>
+    </div>
+    
+    <button class="join-btn">Join us today</button>
+    <div class="heart">💞</div>
+    <div class="profile-box fade-in pre-animate">
+      <img src="Mo5.jpg" alt="Female Match">
+      <div class="match-message">
+        <strong><h1>What Is the MiAmor Couples Challenge and How Can You Win N300,000?</h1></strong><br><p>Join the MiAmor Couples Challenge and win up to #300,000! Sign up on MiAmor, choose your love partner, join the contest, and complete fun couple tasks. The top 3 couples win cash prizes. It's all about love, fun, and rewards. Start your love journey and rise to the top - only on MiAmor, the platform where
+
+love truly pays!</p><br>Start a Chat with them
       </div>
     </div>
     
