--- a/index.html
+++ b/index.html
@@ -360,68 +360,60 @@ Whether for fun or profit, each win brings real earnings.
      <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo3.jpg" alt="Female Match">
+      <img src="Mo5.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
-✅ Engage more, win more.
-✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
+        <strong><h1>Can I Learn Skills on MiAmor?</h1></strong><br><p>Yes! MiAmor is more than a love platform — it's your digital learning hub. Access in-demand skills like digital marketing, copywriting, mini importation, freelancing, web & app development, graphics, UI/UX, and more. Grow personally and professionally. On MiAmor, love meets lifelong growth and opportunity.</p><br>Click to start
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
-      <img src="Mo4.jpg" alt="Male Match">
+      <img src="Mo6.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+        <strong><h1>How Can I Sell Items on MiAmor?</h1></strong><br><p>MiAmor’s Sell It Sector is your trusted online marketplace. Sell gadgets, clothes, or personal items directly to ready buyers—no middlemen, no stress. Enjoy fast, secure, and easy transactions. List your legal items now and turn them into quick cash while exploring all that MiAmor has to offer. List. Connect. Sell.</p><br>Start now
       </div>
     </div>
 
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo3.jpg" alt="Female Match">
+      <img src="Mo7.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
-✅ Engage more, win more.
-✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
+        <strong><h1>How Can I Earn and Find Love Across Africa with MiAmor?</h1></strong><br><p>MiAmor is a trusted global platform helping people across Africa—Ghana, Kenya, Uganda, Cameroon, Sierra Leone, and beyond—find love and earn money at the same time. Thousands are already building relationships and income through MiAmor. Join now and experience a platform where love and opportunity have no borders.</p><br>Click to start
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
-      <img src="Mo4.jpg" alt="Male Match">
+      <img src="Mo8.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+        <strong><h1>What Can You Do on MiAmor?</h1></strong><br><p>MiAmor lets you earn and enjoy love! Get matched, play games, earn from TikTok, Facebook, and sharing. Join raffles, contests, and get bonuses, incentives, eBooks, love hampers, couple trips, daily tips, jobs, and sell online. Sign up today and enjoy MiAmor's all-in-one love, fun, and money-making features.</p><br>Start now 
       </div>
     </div>
 
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo3.jpg" alt="Female Match">
+      <img src="Mo9.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
-✅ Engage more, win more.
-✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
+        <strong><h1>What Are MiAmor Incentives?</h1></strong><br><p>MiAmor rewards you for your efforts! We know turning leads into active users is tough, so we created a generous incentive system to support you. Every user gets rewarded handsomely just for participating. ✅ Download our incentive layout now and start earning more with MiAmor.</p><br>Click to start
       </div>
     </div>
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
-      <img src="Mo4.jpg" alt="Male Match">
+      <img src="Mo10.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>How to Earn Daily from TikTok & Facebook with MiAmor</h1></strong><br><p>Want to earn from TikTok and Facebook? MiAmor lets you make up to $2.5 daily by simply sharing your videos. You can also duet with other users to boost your earnings. It’s fun, fast, and free! Create content, share directly from MiAmor, and start earning. Go viral and get paid—MiAmor turns your social time into income.</p><br>Start a Chat with them
+        <strong><h1>Is Miamor a Legit Company?</h1></strong><br><p>Yes! 💯 Miamor is now officially registered with the Corporate Affairs Commission (CAC). This confirms Miamor as a legal, credible, and trustworthy platform. You can confidently join, promote, and earn, knowing it's fully compliant. This marks a new chapter of transparency, growth, and long-term success for the Miamor platform.</p><br>Start a Chat with them
       </div>
     </div>
     
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo5.jpg" alt="Female Match">
+      <img src="Mo11.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What Is the MiAmor Couples Challenge and How Can You Win N300,000?</h1></strong><br><p>Join the MiAmor Couples Challenge and win up to #300,000! Sign up on MiAmor, choose your love partner, join the contest, and complete fun couple tasks. The top 3 couples win cash prizes. It's all about love, fun, and rewards. Start your love journey and rise to the top - only on MiAmor, the platform where
-
-love truly pays!</p><br>Start a Chat with them
+        <strong><h1>Why Should I Join MiAmor?</h1></strong><br><p>MiAmor is secure, user-first, and globally trusted. Enjoy fast payouts, instant support, one-click matching, full transparency, and guaranteed privacy. Our platform is easy to use, with top-level data protection. Join today to connect, earn, and experience the MiAmor advantage—where love meets opportunity. 💘✨</p>
       </div>
     </div>
     
