--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Whether for fun or profit, each win brings real earnings.
      <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo5.jpg" alt="Female Match">
+      <img src="Mo55.jpg" alt="Female Match">
       <div class="match-message">
         <strong><h1>Can I Learn Skills on MiAmor?</h1></strong><br><p>Yes! MiAmor is more than a love platform — it's your digital learning hub. Access in-demand skills like digital marketing, copywriting, mini importation, freelancing, web & app development, graphics, UI/UX, and more. Grow personally and professionally. On MiAmor, love meets lifelong growth and opportunity.</p><br>Click to start
       </div>
@@ -394,7 +394,7 @@ Whether for fun or profit, each win brings real earnings.
     <button class="join-btn">Join us today</button>
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
-      <img src="Mo55.jpg" alt="Female Match">
+      <img src="Mo9.jpg" alt="Female Match">
       <div class="match-message">
         <strong><h1>What Are MiAmor Incentives?</h1></strong><br><p>MiAmor rewards you for your efforts! We know turning leads into active users is tough, so we created a generous incentive system to support you. Every user gets rewarded handsomely just for participating. ✅ Download our incentive layout now and start earning more with MiAmor.</p><br>Click to start
       </div>
@@ -425,7 +425,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="footer-hearts"></div>
     <div class="footer-zebra"></div>
     <div class="footer-content">
-      <img src="https://miamorweb.site/miamor-logo.png" alt="MiAmor Logo" class="footer-logo" />
+      <img src="Milogo.png" alt="MiAmor Logo" class="footer-logo" />
       <div class="social-icons">
         <a href="#"><i class="fab fa-whatsapp"></i></a>
         <a href="#"><i class="fab fa-tiktok"></i></a>
